syntax = "proto3";

package dragonfly.plugin.events;

option go_package = "github.com/EinBexiii/dragonfly-wasm/api/proto/eventspb";

// Vector3 represents a 3D position or direction.
message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

// BlockPos represents a block position in the world.
message BlockPos {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

// Player represents minimal player data passed to plugins.
message Player {
  string uuid = 1;
  string name = 2;
  string xuid = 3;
  Vector3 position = 4;
  float yaw = 5;
  float pitch = 6;
  string world_name = 7;
  int32 gamemode = 8;
  float health = 9;
  float max_health = 10;
}

// ItemStack represents an item in player's inventory.
message ItemStack {
  string item_type = 1;
  int32 count = 2;
  map<string, string> metadata = 3;
}

// Block represents a block in the world.
message Block {
  string block_type = 1;
  BlockPos position = 2;
  map<string, string> properties = 3;
}

// Entity represents a generic entity.
message Entity {
  string uuid = 1;
  string entity_type = 2;
  Vector3 position = 3;
  float yaw = 4;
  float pitch = 5;
}

// EventResult contains the plugin's response to an event.
message EventResult {
  bool cancelled = 1;
  map<string, string> modifications = 2;
  string error = 3;
}

// ===== Player Events =====

// PlayerJoinEvent is fired when a player joins the server.
message PlayerJoinEvent {
  Player player = 1;
  string join_message = 2;
}

// PlayerQuitEvent is fired when a player leaves the server.
message PlayerQuitEvent {
  Player player = 1;
  string quit_message = 2;
}

// PlayerChatEvent is fired when a player sends a chat message.
message PlayerChatEvent {
  Player player = 1;
  string message = 2;
}

// PlayerMoveEvent is fired when a player moves.
message PlayerMoveEvent {
  Player player = 1;
  Vector3 old_position = 2;
  Vector3 new_position = 3;
  float old_yaw = 4;
  float new_yaw = 5;
  float old_pitch = 6;
  float new_pitch = 7;
}

// PlayerTeleportEvent is fired when a player teleports.
message PlayerTeleportEvent {
  Player player = 1;
  Vector3 from = 2;
  Vector3 to = 3;
}

// PlayerJumpEvent is fired when a player jumps.
message PlayerJumpEvent {
  Player player = 1;
}

// PlayerSprintEvent is fired when a player starts or stops sprinting.
message PlayerSprintEvent {
  Player player = 1;
  bool sprinting = 2;
}

// PlayerSneakEvent is fired when a player starts or stops sneaking.
message PlayerSneakEvent {
  Player player = 1;
  bool sneaking = 2;
}

// PlayerRespawnEvent is fired when a player respawns.
message PlayerRespawnEvent {
  Player player = 1;
  Vector3 spawn_position = 2;
}

// PlayerDeathEvent is fired when a player dies.
message PlayerDeathEvent {
  Player player = 1;
  string death_message = 2;
  bool keep_inventory = 3;
}

// ===== Combat Events =====

// PlayerHurtEvent is fired when a player takes damage.
message PlayerHurtEvent {
  Player player = 1;
  double damage = 2;
  double final_damage = 3;
  string damage_source = 4;
  Entity attacker = 5;
}

// PlayerHealEvent is fired when a player is healed.
message PlayerHealEvent {
  Player player = 1;
  double amount = 2;
  string heal_source = 3;
}

// PlayerAttackEntityEvent is fired when a player attacks an entity.
message PlayerAttackEntityEvent {
  Player player = 1;
  Entity target = 2;
  double damage = 3;
  double knockback = 4;
  bool critical = 5;
}

// ===== Block Events =====

// BlockBreakEvent is fired when a player breaks a block.
message BlockBreakEvent {
  Player player = 1;
  Block block = 2;
  repeated ItemStack drops = 3;
  int32 experience = 4;
}

// BlockPlaceEvent is fired when a player places a block.
message BlockPlaceEvent {
  Player player = 1;
  Block block = 2;
  BlockPos against = 3;
}

// BlockInteractEvent is fired when a player interacts with a block.
message BlockInteractEvent {
  Player player = 1;
  Block block = 2;
  int32 face = 3;
}

// ===== Item Events =====

// ItemUseEvent is fired when a player uses an item.
message ItemUseEvent {
  Player player = 1;
  ItemStack item = 2;
}

// ItemUseOnBlockEvent is fired when a player uses an item on a block.
message ItemUseOnBlockEvent {
  Player player = 1;
  ItemStack item = 2;
  Block block = 3;
  int32 face = 4;
  Vector3 click_position = 5;
}

// ItemUseOnEntityEvent is fired when a player uses an item on an entity.
message ItemUseOnEntityEvent {
  Player player = 1;
  ItemStack item = 2;
  Entity target = 3;
}

// ItemConsumeEvent is fired when a player consumes an item.
message ItemConsumeEvent {
  Player player = 1;
  ItemStack item = 2;
}

// ItemDropEvent is fired when a player drops an item.
message ItemDropEvent {
  Player player = 1;
  ItemStack item = 2;
}

// ItemPickupEvent is fired when a player picks up an item.
message ItemPickupEvent {
  Player player = 1;
  ItemStack item = 2;
}

// ===== World Events =====

// EntitySpawnEvent is fired when an entity spawns.
message EntitySpawnEvent {
  Entity entity = 1;
  string world_name = 2;
}

// EntityDespawnEvent is fired when an entity despawns.
message EntityDespawnEvent {
  Entity entity = 1;
  string world_name = 2;
}

// ===== Command Events =====

// CommandExecuteEvent is fired when a player executes a command.
message CommandExecuteEvent {
  Player player = 1;
  string command = 2;
  repeated string arguments = 3;
}

// ===== Sign Events =====

// SignEditEvent is fired when a player edits a sign.
message SignEditEvent {
  Player player = 1;
  BlockPos position = 2;
  bool front_side = 3;
  string old_text = 4;
  string new_text = 5;
}

// ===== Transfer Events =====

// ServerTransferEvent is fired when a player is transferred to another server.
message ServerTransferEvent {
  Player player = 1;
  string address = 2;
  int32 port = 3;
}

// ===== Plugin Host Functions =====

// LogRequest is sent to the host to log a message.
message LogRequest {
  string level = 1;
  string message = 2;
}

// BroadcastRequest is sent to broadcast a message to all players.
message BroadcastRequest {
  string message = 1;
}

// SendMessageRequest is sent to send a message to a specific player.
message SendMessageRequest {
  string player_uuid = 1;
  string message = 2;
}

// TeleportPlayerRequest is sent to teleport a player.
message TeleportPlayerRequest {
  string player_uuid = 1;
  Vector3 position = 2;
  string world_name = 3;
}

// SetBlockRequest is sent to set a block in the world.
message SetBlockRequest {
  string world_name = 1;
  BlockPos position = 2;
  string block_type = 3;
  map<string, string> properties = 4;
}

// GetBlockRequest is sent to get block information.
message GetBlockRequest {
  string world_name = 1;
  BlockPos position = 2;
}

// GetBlockResponse contains block information.
message GetBlockResponse {
  Block block = 1;
  string error = 2;
}

// GetPlayerRequest is sent to get player information.
message GetPlayerRequest {
  string player_uuid = 1;
}

// GetPlayerResponse contains player information.
message GetPlayerResponse {
  Player player = 1;
  string error = 2;
}

// GetOnlinePlayersRequest is sent to get all online players.
message GetOnlinePlayersRequest {}

// GetOnlinePlayersResponse contains all online players.
message GetOnlinePlayersResponse {
  repeated Player players = 1;
}

// KickPlayerRequest is sent to kick a player.
message KickPlayerRequest {
  string player_uuid = 1;
  string reason = 2;
}

// GiveItemRequest is sent to give an item to a player.
message GiveItemRequest {
  string player_uuid = 1;
  ItemStack item = 2;
}

// SetPlayerHealthRequest is sent to set a player's health.
message SetPlayerHealthRequest {
  string player_uuid = 1;
  float health = 2;
}

// SetPlayerGamemodeRequest is sent to set a player's gamemode.
message SetPlayerGamemodeRequest {
  string player_uuid = 1;
  int32 gamemode = 2;
}

// ScheduleTaskRequest is sent to schedule a delayed task.
message ScheduleTaskRequest {
  string task_id = 1;
  int64 delay_ms = 2;
  bytes data = 3;
}

// PluginStorageGetRequest is sent to get a value from plugin storage.
message PluginStorageGetRequest {
  string key = 1;
}

// PluginStorageGetResponse contains the stored value.
message PluginStorageGetResponse {
  bytes value = 1;
  bool found = 2;
}

// PluginStorageSetRequest is sent to set a value in plugin storage.
message PluginStorageSetRequest {
  string key = 1;
  bytes value = 2;
}
